@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 Anton Tananaev (anton@traccar.org)
+ * Copyright 2015 - 2020 Anton Tananaev (anton@traccar.org)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.traccar.Context;
-import org.traccar.model.MiscFormatter;
 import org.traccar.model.Permission;
 
 import javax.sql.DataSource;
@@ -114,11 +113,7 @@ public final class QueryBuilder {
                     name = name.toLowerCase();
 
                     // Add to list
-                    List<Integer> indexList = paramMap.get(name);
-                    if (indexList == null) {
-                        indexList = new LinkedList<>();
-                        paramMap.put(name, indexList);
-                    }
+                    List<Integer> indexList = paramMap.computeIfAbsent(name, k -> new LinkedList<>());
                     indexList.add(index);
 
                     index++;
@@ -284,12 +279,7 @@ public final class QueryBuilder {
                     } else if (method.getReturnType().equals(byte[].class)) {
                         setBlob(name, (byte[]) method.invoke(object));
                     } else {
-                        if (method.getReturnType().equals(Map.class)
-                                && Context.getConfig().getBoolean("database.xml")) {
-                            setString(name, MiscFormatter.toXmlString((Map) method.invoke(object)));
-                        } else {
-                            setString(name, Context.getObjectMapper().writeValueAsString(method.invoke(object)));
-                        }
+                        setString(name, Context.getObjectMapper().writeValueAsString(method.invoke(object)));
                     }
                 } catch (IllegalAccessException | InvocationTargetException | JsonProcessingException error) {
                     LOGGER.warn("Get property error", error);
@@ -318,96 +308,72 @@ public final class QueryBuilder {
             final Class<?> parameterType, final Method method, final String name) {
 
         if (parameterType.equals(boolean.class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        method.invoke(object, resultSet.getBoolean(name));
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
-                    }
+            processors.add((object, resultSet) -> {
+                try {
+                    method.invoke(object, resultSet.getBoolean(name));
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else if (parameterType.equals(int.class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        method.invoke(object, resultSet.getInt(name));
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
-                    }
+            processors.add((object, resultSet) -> {
+                try {
+                    method.invoke(object, resultSet.getInt(name));
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else if (parameterType.equals(long.class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        method.invoke(object, resultSet.getLong(name));
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
-                    }
+            processors.add((object, resultSet) -> {
+                try {
+                    method.invoke(object, resultSet.getLong(name));
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else if (parameterType.equals(double.class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        method.invoke(object, resultSet.getDouble(name));
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
-                    }
+            processors.add((object, resultSet) -> {
+                try {
+                    method.invoke(object, resultSet.getDouble(name));
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else if (parameterType.equals(String.class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        method.invoke(object, resultSet.getString(name));
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
-                    }
+            processors.add((object, resultSet) -> {
+                try {
+                    method.invoke(object, resultSet.getString(name));
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else if (parameterType.equals(Date.class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        Timestamp timestamp = resultSet.getTimestamp(name);
-                        if (timestamp != null) {
-                            method.invoke(object, new Date(timestamp.getTime()));
-                        }
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
+            processors.add((object, resultSet) -> {
+                try {
+                    Timestamp timestamp = resultSet.getTimestamp(name);
+                    if (timestamp != null) {
+                        method.invoke(object, new Date(timestamp.getTime()));
                     }
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else if (parameterType.equals(byte[].class)) {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    try {
-                        method.invoke(object, resultSet.getBytes(name));
-                    } catch (IllegalAccessException | InvocationTargetException error) {
-                        LOGGER.warn("Set property error", error);
-                    }
+            processors.add((object, resultSet) -> {
+                try {
+                    method.invoke(object, resultSet.getBytes(name));
+                } catch (IllegalAccessException | InvocationTargetException error) {
+                    LOGGER.warn("Set property error", error);
                 }
             });
         } else {
-            processors.add(new ResultSetProcessor<T>() {
-                @Override
-                public void process(T object, ResultSet resultSet) throws SQLException {
-                    String value = resultSet.getString(name);
-                    if (value != null && !value.isEmpty()) {
-                        try {
-                            method.invoke(object, Context.getObjectMapper().readValue(value, parameterType));
-                        } catch (InvocationTargetException | IllegalAccessException | IOException error) {
-                            LOGGER.warn("Set property error", error);
-                        }
+            processors.add((object, resultSet) -> {
+                String value = resultSet.getString(name);
+                if (value != null && !value.isEmpty()) {
+                    try {
+                        method.invoke(object, Context.getObjectMapper().readValue(value, parameterType));
+                    } catch (InvocationTargetException | IllegalAccessException | IOException error) {
+                        LOGGER.warn("Set property error", error);
                     }
                 }
             });
@@ -453,12 +419,12 @@ public final class QueryBuilder {
 
                     while (resultSet.next()) {
                         try {
-                            T object = clazz.newInstance();
+                            T object = clazz.getDeclaredConstructor().newInstance();
                             for (ResultSetProcessor<T> processor : processors) {
                                 processor.process(object, resultSet);
                             }
                             result.add(object);
-                        } catch (InstantiationException | IllegalAccessException e) {
+                        } catch (ReflectiveOperationException e) {
                             throw new IllegalArgumentException();
                         }
                     }
